# linux-pico

./: .gitignore  CMakeLists.txt
src/: client_program.c  client_program.h  comm_commands.h  file_functions.c  file_functions.h  main.c  memory_bitmap.h  page_functions.h  usb_handler.c  usb_handler.h
